test/fail/undefined_variable.zn
# ERRORS: 2
func main() {
  var x = unknown_var
  0
}
